test: server response has been replaced with text block